--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Niklas Ekström</strong>, a devops engineer Currently working in Malta<br /></h2>
+								<p>This is a test site for cloudflare pages</p><br />
+								</p>
 							</header>
 
 							<footer>
