--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 							<header>
 								<h2 class="alt">Hi! I'm <strong>Niklas Ekström</strong>, a devops engineer Currently working in Malta<br /></h2>
-								<p>This is a test site for cloudflare pages</p><br />
+								<p>This is a test site for cloudflare pages, just to see how it works</p><br />
 								</p>
 							</header>
 
