--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 										<strong>4,096</strong> Aliquam
 									</li>
 									<li class="style5">
-										<span class="fa-solid fa-money-bill"></span>
+										<span class="fa fa-money"></span>
 										<strong>1+ Million</strong> Nullam
 									</li>
 								</ul>
