--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 								</header>
 								<ul class="statistics">
 									<li class="style1">
-										<span class="fa-solid solid fa-people"></span>
+										<span class="icon solid fa-people"></span>
 										<strong>6</strong> Etiam
 									</li>
 									<li class="style2">
@@ -110,7 +110,7 @@
 										<strong>4,096</strong> Aliquam
 									</li>
 									<li class="style5">
-										<span class="fa fa-money"></span>
+										<span class="icon solid fa-money"></span>
 										<strong>1+ Million</strong> Nullam
 									</li>
 								</ul>
