--- a/index.html
+++ b/index.html
@@ -81,22 +81,22 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/1.png" class="image fit"><img src="images/fulls/1.png" title="The Anonymous Red" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/2.png" class="image fit"><img src="images/fulls/2.png" title="Airchitecture II" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/3.png" class="image fit"><img src="images/fulls/3.png" title="Air Lounge" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/4.png" class="image fit"><img src="images/fulls/4.png" title="Carry on" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/5.png" class="image fit"><img src="images/fulls/5.png" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/6.png" class="image fit"><img src="images/fulls/6.png" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
