--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>MidJourney Journey</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>MidJourney Malta</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -34,8 +34,7 @@
 					<header>
 						<h2>Hey.</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>I like to use  <strong>MidJourney</strong> which is an independent research lab exploring new mediums of thought and expanding the imaginative powers of the human species.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -48,9 +47,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I do not make any of this art myself, is all AI generated art, i only feed it with the input of how i want it to imagine the picture.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -61,9 +58,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>30 Year old expat living on the island.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -73,9 +68,7 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>You can do whatever you want with my work, but please follow the terms of service by MidJourney https://midjourney.gitbook.io/docs/terms-of-service.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -98,32 +91,30 @@
 							<article class="from-right">
 								<a href="images/fulls/6.png" class="image fit"><img src="images/fulls/6.png" title="Bent IX" alt="" /></a>
 							</article>
+							<article class="from-left">
+								<a href="images/fulls/7.png" class="image fit"><img src="images/fulls/7.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/8.png" class="image fit"><img src="images/fulls/8.png" title="Bent IX" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/9.png" class="image fit"><img src="images/fulls/9.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/10.png" class="image fit"><img src="images/fulls/10.png" title="Bent IX" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/11.png" class="image fit"><img src="images/fulls/11.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/12.png" class="image fit"><img src="images/fulls/12.png" title="Bent IX" alt="" /></a>
+							</article>
 						</div>
 
 				</div>
 			</section>
 
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
-								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
-								<div class="field"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-					</div>
-				</div>
-			</section>
+		
 
 		<!-- Footer -->
 			<footer id="footer">
