--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 						<li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li>
 						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -58,7 +57,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>30 Year old expat living on the island.</p>
+					<p>30 Year old expat living on the island. Working in tech, testing out github pages.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
