--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>You can do whatever you want with my work, but please follow the terms of service by MidJourney https://midjourney.gitbook.io/docs/terms-of-service.</p>
+						<p>You can do whatever you want with my work, but please follow the terms of service by <a href="https://midjourney.gitbook.io/docs/terms-of-service">MidJourney.</a></p>
 					</header>
 
 					<!-- Gallery  -->
