--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<a href="images/fulls/11.png" class="image fit"><img src="images/fulls/11.png" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/12.png" class="image fit"><img src="images/fulls/12.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/city_heaven.png" class="image fit"><img src="images/fulls/city_heaven.png" title="Bent IX" alt="" /></a>
 							</article>
 						</div>
 
