--- a/index.html
+++ b/index.html
@@ -108,6 +108,27 @@
 							<article class="from-right">
 								<a href="images/fulls/city_heaven.png" class="image fit"><img src="images/fulls/city_heaven.png" title="Bent IX" alt="" /></a>
 							</article>
+							<article class="from-left">
+								<a href="images/fulls/12.png" class="image fit"><img src="images/fulls/12.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/13.png" class="image fit"><img src="images/fulls/13.png" title="Bent IX" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/14.png" class="image fit"><img src="images/fulls/14.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/15.png" class="image fit"><img src="images/fulls/15.png" title="Bent IX" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/16.png" class="image fit"><img src="images/fulls/16.png" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/17.png" class="image fit"><img src="images/fulls/17.png" title="Bent IX" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/18.png" class="image fit"><img src="images/fulls/18.png" title="The sparkling shell" alt="" /></a>
+							</article>
 						</div>
 
 				</div>
