--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<a href="images/fulls/city_heaven.png" class="image fit"><img src="images/fulls/city_heaven.png" title="Bent IX" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/12.png" class="image fit"><img src="images/fulls/12.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/god.png" class="image fit"><img src="images/fulls/god.png" title="The sparkling shell" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/13.png" class="image fit"><img src="images/fulls/13.png" title="Bent IX" alt="" /></a>
