--- a/index.html
+++ b/index.html
@@ -73,61 +73,61 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/1.png" class="image fit"><img src="images/fulls/1.png" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/1.png" class="image fit"><img src="images/fulls/1.png" title="An Angel" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/2.png" class="image fit"><img src="images/fulls/2.png" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/2.png" class="image fit"><img src="images/fulls/2.png" title="linux, network, terraform, git" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/3.png" class="image fit"><img src="images/fulls/3.png" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/3.png" class="image fit"><img src="images/fulls/3.png" title="octopus reaching through galaxy, tentacles crawling through stars, cosmic horror, hyperdetailed, epic view, octane render, photorealistic" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/4.png" class="image fit"><img src="images/fulls/4.png" title="Carry on" alt="" /></a>
+								<a href="images/fulls/4.png" class="image fit"><img src="images/fulls/4.png" title="malta, cosmic horror" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/5.png" class="image fit"><img src="images/fulls/5.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/5.png" class="image fit"><img src="images/fulls/5.png" title="malta, cosmic horror" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/6.png" class="image fit"><img src="images/fulls/6.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/6.png" class="image fit"><img src="images/fulls/6.png" title="Pharaoh made of glass with fractal shaped swords in hands riding on a white deer in a ancient forest filled with golden scarabs falling from alien looking trees, high details" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/7.png" class="image fit"><img src="images/fulls/7.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/7.png" class="image fit"><img src="images/fulls/7.png" title="only one texture, water color, anime, grey, green, Malta" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/8.png" class="image fit"><img src="images/fulls/8.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/8.png" class="image fit"><img src="images/fulls/8.png" title="Malta on fire, cosmic" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/9.png" class="image fit"><img src="images/fulls/9.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/9.png" class="image fit"><img src="images/fulls/9.png" title="Zombie apocalypse, Malta, Valetta, Cosmic, 4k, Ultra HD" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/10.png" class="image fit"><img src="images/fulls/10.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/10.png" class="image fit"><img src="images/fulls/10.png" title="Zombie apocalypse, Malta, Valetta, Cosmic, 4k, Ultra HD" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/11.png" class="image fit"><img src="images/fulls/11.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/11.png" class="image fit"><img src="images/fulls/11.png" title="Ronald Mcdonald dressed as a samurai sitting under a moon made of Donald Trumps face with eldritch tentacles forming out of the ground" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/city_heaven.png" class="image fit"><img src="images/fulls/city_heaven.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/city_heaven.png" class="image fit"><img src="images/fulls/city_heaven.png" title="Holy jesus hovering over Malta, ehteral, 4k, detailed, realistic, castle" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/god.png" class="image fit"><img src="images/fulls/god.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/god.png" class="image fit"><img src="images/fulls/god.png" title="God, high definition" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/13.png" class="image fit"><img src="images/fulls/13.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/13.png" class="image fit"><img src="images/fulls/13.png" title="Highly detailed aqua robot with trident" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/14.png" class="image fit"><img src="images/fulls/14.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/14.png" class="image fit"><img src="images/fulls/14.png" title="Håkan Hellström, nihonga" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/15.png" class="image fit"><img src="images/fulls/15.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/15.png" class="image fit"><img src="images/fulls/15.png" title="octopus reaching through galaxy, tentacles crawling through stars, cosmic horror, hyperdetailed, epic view, octane render, photorealistic" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/16.png" class="image fit"><img src="images/fulls/16.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/16.png" class="image fit"><img src="images/fulls/16.png" title="old man looking over railing of ship with spaceship above" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/17.png" class="image fit"><img src="images/fulls/17.png" title="Bent IX" alt="" /></a>
+								<a href="images/fulls/17.png" class="image fit"><img src="images/fulls/17.png" title="Pharaoh made of glass with fractal shaped swords in hands riding on a white deer in a ancient forest filled with golden scarabs falling from alien looking trees, high details" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/18.png" class="image fit"><img src="images/fulls/18.png" title="The sparkling shell" alt="" /></a>
+								<a href="images/fulls/18.png" class="image fit"><img src="images/fulls/18.png" title="Zombie apocalypse, Malta, Valetta, Cosmic, 4k, Ultra HD" alt="" /></a>
 							</article>
 						</div>
 
